--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     
     <application android:label="@string/ime_name"
         android:icon="@drawable/ic_thumbtype_launcher"
